--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.ericlam.mc</groupId>
     <artifactId>ELRpgItem</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3</version>
 
     <repositories>
         <repository>
@@ -17,6 +17,10 @@
             <id>xuan</id>
             <url>https://xuan.nctu.me:8081/repository/Maven/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
 
@@ -25,6 +29,12 @@
             <groupId>patched</groupId>
             <artifactId>1.15</artifactId>
             <version>R1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
